[package]
name = "toolkit-api"
version = "0.1.0"
authors = ["Joshua Paul Chan <joshpaulchan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
juniper = "0.15"
juniper_warp = "0.5"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"

[[bin]]
name = "toolkit-api"
path = "main.rs"
